# patchrail

./: .gitignore  ADOPTERS.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
docs/: agent-control-plane.md  agent-workflows.md  api-reference.md  ci-failure-zoo.md  ci-janitor.md  codex-workflows.md  funded-issues-ethics.md  github-action.md  json-cookbook.md  metrics.md  open-source-program-evidence.md  openai-codex-for-oss-evidence.md  openai-open-source-evidence.md  oss-program-evidence.md  pilot-guide.md  pilot-request-package.md  pre-commit-example.md  public-workflow-ledger.md  quickstart.md  redaction.md  release-process.md  release-v0.1.0-evidence.md  release-v0.2.0-evidence.md  release-v0.3.0-evidence.md  release-v0.4.0-evidence.md  roadmap.md  threat-model.md  using-the-action.md
schemas/: application_dossier.schema.json  ci_result.schema.json  queue_audit_event.schema.json  queue_audit_summary.schema.json  queue_policy_resolution.schema.json  queue_policy_scan.schema.json  queue_proposal.schema.json  queue_review.schema.json  queue_status.schema.json  queue_work_item.schema.json  reviewer_quick_check_artifacts.schema.json
scripts/: release_readiness.py  reviewer_quick_check.py  update_ci_evidence_reference.py
tests/: test_ci_classify_expansion.py  test_ci_cli.py  test_ci_triage_action.py  test_funded_issues_algora_board.py  test_funded_issues_apply_recheck.py  test_funded_issues_blocklist.py  test_funded_issues_cli.py  test_funded_issues_client_report.py  test_funded_issues_competition.py  test_funded_issues_payout_effort.py  test_funded_issues_source_noise.py  test_funded_issues_staleness.py  test_funded_issues_store.py  test_funded_issues_testability.py  test_public_workflows.py  test_queue_cli.py  test_queue_http_api.py  test_queue_server.py  test_schema_conformance.py  test_web_metrics_cli.py
(+154 files in other folders)
